src/App.css
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');

body {
  font-family: 'IBM Plex Sans', sans-serif;
}

h1 {
  text-align: center;
}

text {
  font-family: 'IBM Plex Sans', sans-serif !important;
}
.app {
  margin: 2rem auto;
  padding: 2rem;
  box-shadow: 3px 3px 15px 5px rgba(0, 0, 0, 0.1);
  max-width: 120ch;
}

.toolbar {
  float: right;
  position: sticky;
  top: 1rem;
  z-index: 10;
  background-color: white;
  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.1);
  margin-right: 3rem;
  padding: 1rem;
}

.charts {
  margin: 1rem;
}

